--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -22,12 +22,19 @@
     border-radius: 5px;
     border-style: none;
 }
-.header{
-    background-image: url(../images/developer.png),url(../images/header_bg.png);
-    background-position: top left, bottom right;
-    background-repeat: no-repeat;
-}
+ .section-title{
+    font-size: 35px;
+    font-weight: bold;
+ }
+ .section-description{
+    font-size: 18px;
+    color: #757575;
+ }
+ .secondary-bg{
+    background-color: #FFF8F3;
+ }
 /* nav bar */
+
 nav{
     display: flex;
     align-items: center;
@@ -50,6 +57,12 @@ nav ul{
     align-items: center;
     
 }
+.header{
+    background-image: url(../images/developer.png),url(../images/header_bg.png);
+    background-position: top left, bottom right;
+    background-repeat: no-repeat;
+}
+
 /* Banner style */
 .banner{
     display: flex;
@@ -69,4 +82,24 @@ nav ul{
 }
 .banner-profile-picture{
     width: 584px;
+}
+/* main style */
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+/* about style */
+.about{
+    border-radius: 10px;
+    padding: 130px 156px;
+    text-align: center;
+    margin-top: 130px;
+}
+.item-description{
+    font-weight: bold;
+}
+.about-items{
+    display: flex;
+    justify-content: space-around;
+
 }
