--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -163,5 +163,6 @@ footer input[type=text] ,  input[type=email], footer textarea {
     display: block;
     width: 100%;
     padding: 10px 20px;
+    margin-bottom: 24px;
     border: none;
 }
